--- a/angular-Heroes-App/src/app/hero-search/hero-search.component.html
+++ b/angular-Heroes-App/src/app/hero-search/hero-search.component.html
@@ -1,7 +1,7 @@
 <div id="search-component">
   <h4><label for="search-box">Hero Search</label></h4>
   
-  <input #searchBox id="search-box" (input)="search(searchBox.value)" />
+  <input #searchBox id="search-box" (input)="search(searchBox.value)" placeholder="Hero Name"/>
   
   <ul class="search-result">
     <li *ngFor="let hero of heroes$ | async" >
